# civil-engineering

./: Cargo.toml
migrations/: 20250210094023_create_tables.sql
scripts/: migrate-add.sh  migrate-revert.sh  migrate-run.sh
src/: main.rs
src/database/: mod.rs
src/facets/: mod.rs
src/facets/heat/: boundary.rs  geometry.rs  heat_source.rs  layer.rs  mod.rs  numerical.rs  thermal_zone.rs
src/facets/heat/materials/: material.rs  mod.rs
src/facets/surveying/: mod.rs
