[package]
name = "civil-engineering"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
geo-types = "0.7.15"
once_cell = "1.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"
tower = "0.5.2"
